kubernetes/app-deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiii-project
  namespace: kiii-project-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiii-project
  template:
    metadata:
      labels:
        app: kiii-project
    spec:
      containers:
        - name: kiii-project
          image: borismokovski/kiii-project
          ports:
            - containerPort: 8080
